--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:5.7
     container_name: MySql
     environment:
-      MYSQL_DATABASE: ma_cuisine_maison
+      MYSQL_DATABASE: mon_starter
       # So you don't have to use root, but you can if you like
       MYSQL_USER: user
       # You can use whatever password you like
