--- a/back/src/main/resources/application-dev.properties
+++ b/back/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 #JPA & MySQL Config
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3300/ma_cuisine_maison
+spring.datasource.url=jdbc:mysql://localhost:3300/mon_starter
 spring.datasource.username=user
 spring.datasource.password=password
 #mail
