--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.profiles.active=dev
-spring.servlet.multipart.max-file-size=50MB
-springdoc.default-produces-media-value=application/json
+spring.profiles.active=test
 server.servlet.context-path=/api/
 
