--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:clearCache": "jest --clearCache"
   },
   "private": true,
   "dependencies": {
@@ -36,26 +37,7 @@
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.2.4",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setup.jest.ts"
-    ],
-    "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/dist/"
-    ],
-    "transform": {
-      "^.+\\.(ts|html)$": [
-        "jest-preset-angular",
-        {
-          "tsconfig": "<rootDir>/tsconfig.spec.json",
-          "stringifyContentPathRegex": "\\.html$"
-        }
-      ]
-    }
   }
 }
