--- a/front/package.json
+++ b/front/package.json
@@ -34,7 +34,9 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.2",
+    "@cypress/code-coverage": "^3.13.1",
     "@types/jest": "^29.5.13",
+    "cypress": "^13.14.2",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.2.4",
     "ts-node": "^10.9.2",
