--- a/front/angular.json
+++ b/front/angular.json
@@ -32,11 +32,22 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.scss"
             ],
             "scripts": [],
-            "browser": "src/main.ts"
+            "browser": "src/main.ts",
+            "budgets": [
+              {
+                "type": "anyComponentStyle", 
+                "maximumWarning": "500kb",
+                "maximumError": "2mb"
+              },
+              {
+                "type": "initial", 
+                "maximumWarning": "500kb",
+                "maximumError": "2mb"
+              }
+            ]
           },
           "configurations": {
             "production": {
