--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,1 +1,39 @@
 name: Continuous integration/Continuous Deployment
+
+on:
+    push:
+      branches: [main]
+    pull_request:
+      branches: [main]
+
+jobs:
+    backend-tests:
+        runs-on: ubuntu-latest
+
+        defaults:
+            run:
+             working-directory: back
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Set up Java JDK
+              uses: actions/setup-java@v4
+              with: 
+                distribution: temurin
+                java-version: 21
+            
+            - name: Build project
+              run: mvn clean install
+
+            - name: Run tests
+              run: mvn verify -Dspring.profiles=test
+
+            - name: Generate Jacoco reports
+              run: mvn test -Dspring.profiles=test
+
+            - name: Upload Jacoco reports
+              uses: actions/upload-artifact@v4
+              with:
+                name: jacoco-reports
+                path: back/target/site/jacoco/*
