--- a/back/pom.xml
+++ b/back/pom.xml
@@ -147,6 +147,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.2.5</version>
+				<configuration>
+					<argLine>-Dspring.profiles.active=test</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
