--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -30,7 +30,7 @@ jobs:
               run: mvn verify
 
             - name: Generate Jacoco reports
-              run: mvn test -Dspring.profiles=test
+              run: mvn test
 
             - name: Upload Jacoco reports
               uses: actions/upload-artifact@v4
