--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -37,3 +37,30 @@ jobs:
               with:
                 name: jacoco-reports
                 path: back/target/site/jacoco/*
+
+    frontend-tests:
+        runs-on: obunto-latest
+
+        defaults:
+            run:
+                working-directory: front
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                node-version: 20
+
+            - name: Run tests
+              run: npm nun test --no-watch --no-progress --browsers=ChromeHeadless
+
+            - name: Generate Jest reports
+              run: npm run test:coverage
+
+            - name: Upload Jest reports
+              uses: actions/upload-artifact@v4
+              with:
+                name: jest-reports
+                path: front/coverage/starter/*
