--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -54,7 +54,7 @@ jobs:
                 node-version: 20
 
             - name: Run tests
-              run: npm run test --no-watch --no-progress --browsers=ChromeHeadless
+              run: npm run test
 
             - name: Generate Jest reports
               run: npm run test:coverage
