--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -66,4 +66,35 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: jest-reports
-                path: front/coverage/my-app/*
+                path: front/coverage/jest/*
+
+    deploy:
+        runs-on: ubuntu-latest
+        needs: [frontend-tests, backend-tests]
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKER_HUB_USERNAME}}
+                password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
+            - name: Build and push Agular Docker image
+              uses: docker/build-push-action@v4
+              with:
+                context: ./front
+                file: front/Dockerfile
+                push: true
+                tags: ${{ secrets.DOCKER_HUB_USERNAME }}/starterfront:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/starterfront:${{github.run_number}}
+            - name: Build and push Spring Boot Docker image
+              uses: docker/build-push-action@v4
+              with:
+                context: ./back
+                file: back/Dockerfile
+                push: true
+                tags: ${{ secrets.DOCKER_HUB_USERNAME }}/starterback:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/starterback:${{github.run_number}}
