--- a/front/angular.json
+++ b/front/angular.json
@@ -40,7 +40,7 @@
               {
                 "type": "anyComponentStyle", 
                 "maximumWarning": "350kb",
-                "maximumError": "2mb"
+                "maximumError": "400kb"
               },
               {
                 "type": "initial", 
