--- a/back/pom.xml
+++ b/back/pom.xml
@@ -149,6 +149,7 @@
 					<version>3.2.5</version>
 				<configuration>
 					<argLine>-Dspring.profiles.active=test</argLine>
+					<mainClass>com.example.StarterApplication</mainClass> 
 				</configuration>
 			</plugin>
 			<plugin>
