--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -98,3 +98,34 @@ jobs:
                 file: back/Dockerfile
                 push: true
                 tags: ${{ secrets.DOCKER_HUB_USERNAME }}/starterback:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/starterback:${{github.run_number}}
+              
+    SonarQube-Analysis-backend:
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: back
+      steps:
+        - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+        - name: Set up JDK
+          uses: actions/setup-java@v1
+          with:
+            java-version: 21
+        - name: Cache SonarQube packages
+          uses: actions/cache@v1
+          with:
+            path: ~/.sonar/cache
+            key: ${{ runner.os }}-sonar
+            restore-keys: ${{ runner.os }}-sonar
+        - name: Cache Maven packages
+          uses: actions/cache@v1
+          with:
+            path: ~/.m2
+            key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+            restore-keys: ${{ runner.os }}-m2
+        - name: Build and analyse
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_HOST_URL: "${{ secrets.SONAR_HOST_URL }}"
+          run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Mon-Starter-CI-CD -Dsonar.projectName='Mon-Starter-Analysis'
