--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -144,5 +144,12 @@ jobs:
           run: npm install
         - name: Install scanner
           run: npm install -g sonarqube-scanner
-        - name: run sonar scanner
-          run: sonar-scanner -Dsonar.token=${{secrets.SONAR_TOKEN}} -Dsonar.host.url="${{secrets.SONAR_HOST_URL }}"
+        - name: Run Sonar scanner
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          run: |
+            sonar-scanner \
+              -Dsonar.projectKey=MonStarter-Frontend \
+              -Dsonar.projectName='Mon Starter Frontend' \
+              -Dsonar.sources=./src \
