--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -105,21 +105,22 @@ jobs:
         run:
           working-directory: back
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
           with:
             fetch-depth: 0
         - name: Set up JDK
-          uses: actions/setup-java@v1
+          uses: actions/setup-java@v4
           with:
+            distribution: temurin
             java-version: 21
         - name: Cache SonarQube packages
-          uses: actions/cache@v1
+          uses: actions/cache@v3
           with:
             path: ~/.sonar/cache
             key: ${{ runner.os }}-sonar
             restore-keys: ${{ runner.os }}-sonar
         - name: Cache Maven packages
-          uses: actions/cache@v1
+          uses: actions/cache@v3
           with:
             path: ~/.m2
             key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -128,7 +129,7 @@ jobs:
           env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             SONAR_HOST_URL: "${{ secrets.SONAR_HOST_URL }}"
-          run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Mon-Starter-CI-CD -Dsonar.projectName='Mon-Starter-Analysis'
+          run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Mon-Starter-CI-CD -Dsonar.projectName='Mon-Starter-Backend'
 
     SonarQube-Analysis-frontend:
       runs-on: ubuntu-latest
