--- a/front/sonar.properties
+++ b/front/sonar.properties
@@ -2,5 +2,5 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
-#sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/jest/lcov.info
 sonar.qualitygate.wait=true
