--- a/front/sonar.properties
+++ b/front/sonar.properties
@@ -1,6 +1,7 @@
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/node_modules/**
+sonar.sources=src/app
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=coverage/jest/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
+sonar.exclusions=**/node_modules/**
 sonar.qualitygate.wait=true
