--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage",
     "test:clearCache": "jest --clearCache"
   },
   "private": true,
