--- a/front/sonar.properties
+++ b/front/sonar.properties
@@ -2,6 +2,6 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=src/app
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
-sonar.exclusions=**/node_modules/**
+sonar.javascript.lcov.reportPaths=front/coverage/lcov.info
+sonar.exclusions=node_modules/**, bower_components/**
 sonar.qualitygate.wait=true
