--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -141,8 +141,14 @@ jobs:
           uses: actions/checkout@v4
           with:
             fetch-depth: 0
-        - name: Install ddependencies
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+        - name: Install dependencies
           run: npm install
+        - name: Run Jest to generate coverage reports
+          run: npm run test:ci
         - name: Install scanner
           run: npm install -g sonarqube-scanner
         - name: Run Sonar scanner
@@ -156,3 +162,6 @@ jobs:
               -Dsonar.sources=./src \
               -Dsonar.tests=./src/app \
               -Dsonar.test.inclusions=**/*.spec.ts \
+              -Dsonar.javascript.lcov.reportPaths=coverage/jest/lcov.info \
+              -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
