--- a/back/pom.xml
+++ b/back/pom.xml
@@ -144,12 +144,14 @@
 
 	<build>
 		<plugins>
+			<!-- Plugin JaCoCo pour la couverture de code -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.9</version>
 				<executions>
 					<execution>
+						<id>prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
@@ -163,18 +165,18 @@
 						</goals>
 					</execution>
 				</executions>
-
 			</plugin>
-			
+
 			<!-- Maven Surefire Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.5</version>
 				<configuration>
-					<argLine> -Dspring.profiles.active=test</argLine>
+					<argLine>-javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/0.8.9/org.jacoco.agent-0.8.9-runtime.jar=destfile=${project.build.directory}/jacoco.exec</argLine>
 				</configuration>
 			</plugin>
+
 			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -189,8 +191,8 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			
 		</plugins>
 	</build>
+
 
 </project>
