--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -129,12 +129,12 @@ jobs:
           env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             SONAR_HOST_URL: "${{ secrets.SONAR_HOST_URL }}"
-          run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=Mon-Starter-CI-CD \
-            -Dsonar.projectName="Mon-Starter-Backend" \
-            -Dsonar.sources=src/main/java \
-            -Dsonar.tests=src/test/java \
-            -Dsonar.java.binaries=target/classes \
+          run: mvn sonar:sonar \ 
+            -Dsonar.projectKey=Mon-Starter-CI-CD \ 
+            -Dsonar.projectName="Mon-Starter-Backend" \ 
+            -Dsonar.sources=src/main/java \ 
+            -Dsonar.tests=src/test/java \ 
+            -Dsonar.java.binaries=target/classes \ 
             -Dsonar.junit.reportPaths=target/surefire-reports \
             -Dsonar.jacoco.reportPaths=target/jacoco.exec
 
