--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -125,6 +125,8 @@ jobs:
             path: ~/.m2
             key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
             restore-keys: ${{ runner.os }}-m2
+        - name: Build the project 
+          run: mvn -B clean verify
         - name: Build and analyse
           env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
