--- a/back/pom.xml
+++ b/back/pom.xml
@@ -102,11 +102,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-
+		<!-- Dépendance utilisée uniquement pour les tests -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>test</scope> <!-- Dépendance utilisée uniquement pour les tests -->
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -171,7 +171,6 @@
 					<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
 				</configuration>
 			</plugin>
-
 
 			<!-- Maven Surefire Plugin -->
 			<plugin>
